--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,224 @@
 .App {
   text-align: left;
+  margin-left: 20px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  margin-bottom: 20px;
+}
+
+.header h1 {
+  margin-bottom: 5px;
+}
+
+
+.search-button {
+  margin-left: 10px;
+  height: 28px;
+}
+
+.search-input {
+  width: 300px;
+  height: 25px;
+}
+
+.profiles {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
+}
+
+.profile-name {
+  display: flex;
+}
+
+.profile-details {
+  padding-top: 0px;
 }
 
 .profile-unknown {
+  color: #9a9999;
+}
+.profile-loading {
+}
+.profile-booster-0 {
+  color: #10a310;
+}
+.profile-booster-1 {
+  color: #ffb2b2;
+}
+.profile-booster-2 {
+  color: #ff9999;
+}
+.profile-booster-3 {
+  color: #ff7f7f;
+}
+.profile-booster-4 {
+  color: #ff6666;
+}
+.profile-booster-5 {
+  color: #ff4c4c;
+}
+.profile-booster-6 {
+  color: #ff0000;
 }
 
-.profile-booster {
-  background-color: #FF0000
+
+
+
+/*Spinner css*/
+
+#circleG{
+	width:30px;
+	margin:auto;
+  margin-left: 10px;
 }
 
-.profile-not-booster {
-  background-color: #10a310
+.circleG{
+	background-color:rgb(204,204,204);
+	float:left;
+	height:6px;
+	margin-left:3px;
+	width:6px;
+	animation-name:bounce_circleG;
+		-o-animation-name:bounce_circleG;
+		-ms-animation-name:bounce_circleG;
+		-webkit-animation-name:bounce_circleG;
+		-moz-animation-name:bounce_circleG;
+	animation-duration:1.0675s;
+		-o-animation-duration:1.0675s;
+		-ms-animation-duration:1.0675s;
+		-webkit-animation-duration:1.0675s;
+		-moz-animation-duration:1.0675s;
+	animation-iteration-count:infinite;
+		-o-animation-iteration-count:infinite;
+		-ms-animation-iteration-count:infinite;
+		-webkit-animation-iteration-count:infinite;
+		-moz-animation-iteration-count:infinite;
+	animation-direction:normal;
+		-o-animation-direction:normal;
+		-ms-animation-direction:normal;
+		-webkit-animation-direction:normal;
+		-moz-animation-direction:normal;
+	border-radius:4px;
+		-o-border-radius:4px;
+		-ms-border-radius:4px;
+		-webkit-border-radius:4px;
+		-moz-border-radius:4px;
+}
+
+#circleG_1{
+	animation-delay:0.2095s;
+		-o-animation-delay:0.2095s;
+		-ms-animation-delay:0.2095s;
+		-webkit-animation-delay:0.2095s;
+		-moz-animation-delay:0.2095s;
+}
+
+#circleG_2{
+	animation-delay:0.4955s;
+		-o-animation-delay:0.4955s;
+		-ms-animation-delay:0.4955s;
+		-webkit-animation-delay:0.4955s;
+		-moz-animation-delay:0.4955s;
+}
+
+#circleG_3{
+	animation-delay:0.6385s;
+		-o-animation-delay:0.6385s;
+		-ms-animation-delay:0.6385s;
+		-webkit-animation-delay:0.6385s;
+		-moz-animation-delay:0.6385s;
+}
+
+
+
+@keyframes bounce_circleG{
+	0%{}
+
+	50%{
+		background-color:rgba(20,9,20,0.97);
+	}
+
+	100%{}
+}
+
+@-o-keyframes bounce_circleG{
+	0%{}
+
+	50%{
+		background-color:rgba(20,9,20,0.97);
+	}
+
+	100%{}
+}
+
+@-ms-keyframes bounce_circleG{
+	0%{}
+
+	50%{
+		background-color:rgba(20,9,20,0.97);
+	}
+
+	100%{}
+}
+
+@-webkit-keyframes bounce_circleG{
+	0%{}
+
+	50%{
+		background-color:rgba(20,9,20,0.97);
+	}
+
+	100%{}
+}
+
+@-moz-keyframes bounce_circleG{
+	0%{}
+
+	50%{
+		background-color:rgba(20,9,20,0.97);
+	}
+
+	100%{}
+}
+
+/*Checkmark css*/
+
+.checkmark {
+    display:inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 22px;
+    height:22px;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+}
+
+.checkmark_stem {
+    position: absolute;
+    width:3px;
+    height:9px;
+    background-color:#ccc;
+    left:11px;
+    top:6px;
+}
+
+.checkmark_kick {
+    position: absolute;
+    width:3px;
+    height:3px;
+    background-color:#ccc;
+    left:8px;
+    top:12px;
 }
