--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
   margin-bottom: 5px;
 }
 
+.errors {
+  margin-top: 10px;
+  font-size: small;
+  color: #ff6666;
+}
 
 .search-button {
   margin-left: 10px;
